--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Random selector</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h3>Enter the choice followed by comma.<br>Enter when you are done! </h3>
+        <textarea placeholder="Enter choices here..." id="textarea" ></textarea>
+
+        <div id="tags">
+            <span class="tag highlight">choice1</span>
+            <span class="tag">choice2</span>
+            <span class="tag">choice3</span>
+
+        </div>
+    </div >
 </body>
 </html>
